# sqlx-model-gen

./: .gitignore  Cargo.toml  README.md
examples/: pg_examples.rs
src/: field_to_string.rs  generator.rs  lib.rs  mysql_generator.rs  pg_generator.rs
