[package]
name = "sql_wrapper"
version = "0.1.4"
edition = "2021"
description = "Generate table Struct and Sql function for table based on sqlx and sql_builder"
license = "MIT"
homepage = "https://github.com/zhangyangyang3/sql_wrapper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "sqlx-postgres", "uuid", "rust_decimal", "mysql", "sqlx-mysql"] }
sql-builder = "3.1.1"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.38"
bigdecimal = "0.4"
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }