[package]
name = "sqlx-model-gen"
version = "0.2.0"
edition = "2021"
description = "Generate model structs from sql database for use in sqlx"
license = "MIT"
homepage = "https://github.com/dra11y/sqlx-model-gen"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "sqlx-postgres", "uuid", "rust_decimal", "mysql", "sqlx-mysql", "bigdecimal"] }
sql-builder = "3.1.1"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
chrono = "0.4.38"
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["v4"] }
